--- a/Barrier Reef orc work on cp1406A2/about.html
+++ b/Barrier Reef orc work on cp1406A2/about.html
@@ -13,30 +13,25 @@
 <!-- Header -->
 <div class="allcontain">
 	<div class="header">
+			
 	</div>
 	<!-- Navbar Up -->
 	<nav class="topnavbar navbar-default topnav">
 		<div class="container">
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed toggle-costume" data-toggle="collapse" data-target="#upmenu" aria-expanded="false">
-					<span class="sr-only"> Toggle navigaion</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
 				<a class="navbar-brand logo" href="#"><img src="Image/logo.png" width="152" height="100" alt=""/></a>
 			</div>	 
 		</div>
-		<div class="collapse navbar-collapse" id="upmenu">
+		<div class="collapse navbar-collapse" id="menu">
 			<ul class="nav navbar-nav" id="navbarontop">
-				<li class="active"><a href="reef.html">HOME</a></li>
-				<li class="active"><a href="about.html">ABOUT US</a></li>
-				<li class="active"><a href="#">UPCOMING</a> </li>
-				<li class="active"><a href="#">BULLETIN BOARD</a> </li>
-				<li class="active"><a href="#">NEWS</a> </li>
-				<li class="active"><a href="#">ARTISTS</a> </li>
-				<li class="active"><a href="#">SUPPORT US</a> </li>
-				<li class="active"><a href="#">CONTACT US</a> </li>
+				<li class="active"><a href="index.html">HOME</a></li>
+						<li><a href="about.html">ABOUT US</a></li>
+						<li><a href="#">UPCOMING</a></li>
+						<li><a href="#">BULLITEN BOARD</a></li>
+							<li><a href="#">NEWS</a></li>
+							<li><a href="#">ARTISTA</a></li>
+				<li><a href="file:///C|/Users/prith/Desktop/2079_garage (2)/2079_garage/contact.html">CONTACT</a></li>
+				<li><a class="postnewcar">SUPPORT US</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -67,14 +62,28 @@ During the next few years the Orchestra performed with the comedy-duo Scared Wei
             </figcaption>
 
 	<!-- ______________________________________________________Bottom Menu ______________________________-->
-<div class="footer">
-	<ul class="socialicon">
-		<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-	</ul>
-	<ul class="givusacall">
-		<li>Give us a call : +6146666666 </li>
-	</ul>
-</div>
+<div class="bottommenu">
+		<div class="bottomlogo">
+		<span class="dotlogo">&bullet;</span><img src="Image/NQEIlogo.jpg" width="113" height="154" alt=""/><span class="dotlogo">&bullet;;</span>
+		</div>
+		<ul class="nav nav-tabs bottomlinks">
+			<li role="presentation" ><a href="index.html">HOME</a></li>
+			<li role="presentation"><a href="#/">UPCOMING</a></li>
+			<li role="presentation"><a href="#/">BULLITEN BOARD</a></li>
+			<li role="presentation"><a href="#/">NEWS</a></li>
+			<li role="presentation"><a href="#/">ARTISTS</a></li>
+			<li role="presentation"><a href="#/">SUPPORT US</a></li>
+			<li role="presentation"><a href="#/">CONTACT US</a></li>
+		</ul>
+	  <h1>"Our Sonsors"</h1>
+	  <img src="Image/sponsers.jpg" width="1890" height="332" alt="sponsors"/>
+<div class="bottomsocial">
+ 	   <a href="#"><i class="fa fa-facebook"></i></a>
+	  </div>
+			<div class="footer">
+				
+			</div>
+	</div>
 </div>
 </body>
 </html>
